--- a/assets/scss/main.min.scss
+++ b/assets/scss/main.min.scss
@@ -16,6 +16,7 @@
 @import "./components/modal";
 @import "./components/home-contact";
 @import "./components/inner-banner";
+@import "./components/faq";
 
 @import 'utilities/variable';
 @import 'utilities/buttons';
