--- a/assets/scss/pages/inner-pages.scss
+++ b/assets/scss/pages/inner-pages.scss
@@ -7,9 +7,47 @@
 .minland-details{
     padding-top: 80px;
     padding-bottom: 100px;
-
+     .inner-form{
+        margin-top: 50px;
+        background-color: $primary;
+        padding: 30px 20px;
+        border-radius: 8px;
+         .title{
+            color: #fff;
+            margin-bottom: 40px;
+            font-size: 25px;
+         }
+        .form-control,
+        .form-select{
+            background-color: transparent;
+            border: none;
+            border-radius: 0;
+            box-shadow: none;
+            outline: none;
+            border-bottom: 1px solid #fff;
+            padding-left: 0;
+            font-size: 16px;
+            color: #fff;
+            &::placeholder{
+                color: #fff;
+            }
+           
+        }
+        .form-select{
+            padding-left: 5px;
+            option{
+                color: #000;
+            }
+        }
+        button{
+          &:hover{
+            background-color: rgba($color: $fourth-color, $alpha: .7);
+          }
+        }
+        
+     }
     .nav-pills{
-        width: 400px;
+        width: 500px;
         position: sticky;
         top: 110px;
         .nav-link {
