--- a/assets/scss/utilities/_buttons.scss
+++ b/assets/scss/utilities/_buttons.scss
@@ -95,7 +95,7 @@
 }
 
 .btn-primary{
-  background-color: $fourth-color!important;
+  background-color: $fourth-color;
   border: none;
   height: 55px;
   border-radius: 2rem;
