--- a/assets/css/pages/business-setup.css
+++ b/assets/css/pages/business-setup.css
@@ -80,10 +80,9 @@
 }
 .service-list-head p {
   margin: auto;
-  max-width: -webkit-max-content;
-  max-width: -moz-max-content;
-  max-width: max-content;
+  max-width: 850px;
   font-size: 18px;
+  text-align: center;
 }
 .service-list .card {
   padding: 30px;
@@ -233,6 +232,13 @@
     margin: auto;
     margin-bottom: 30px;
   }
+}
+.business-process p {
+  font-size: 18px;
+  max-width: 870px;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 30px;
 }
 .business-process .timeline {
   position: relative;
