--- a/assets/scss/pages/business-setup.scss
+++ b/assets/scss/pages/business-setup.scss
@@ -66,8 +66,9 @@
         }
         p{
             margin: auto;
-            max-width: max-content;
+            max-width: 850px;
             font-size: 18px;
+            text-align: center;
         }
     }
     .card{
@@ -220,6 +221,13 @@
             margin: auto;
             margin-bottom: 30px;
         }
+    }
+    p{
+        font-size: 18px;
+        max-width: 870px;
+        margin: auto;
+        text-align: center;
+        margin-bottom: 30px;
     }
     .timeline {
         position: relative;
