--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -126,7 +126,6 @@
     }
 
     .flip-card {
-        background-color: transparent;
         width: 100%;
         height: 350px;
         perspective: 1000px;
@@ -168,11 +167,21 @@
         &-front {
             // background-color: $fourth-color;
             color: #000;
-            transform: rotateY(180deg);
-
-            @include min(992) {
-                transform: 0;
+            padding: 0;
+            figure{
+                width: 100%;
+                height: 100%;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
+            // transform: rotateY(180deg);
+
+            // @include min(992) {
+            //     transform: 0;
+            // }
         }
 
         &-back {
@@ -233,7 +242,7 @@
         height: 60px;
         position: relative;
         width: 100%;
-      
+        margin-top: 50px;
         display: grid;
         place-items: center;
         overflow: hidden;
@@ -266,13 +275,17 @@
       }
       
 .slide {
-    width: 150px;
+    width: 100%;
+    max-width: max-content;
     height: 60px;
   
     display: grid;
     place-items: center;
     transition:0.5s;
     cursor:pointer;
+    font-size: 25px;
+    font-weight: 600;
+    color: $primary;
   }
   .slide:hover{
     transform:scale(0.8)
@@ -297,6 +310,10 @@
     z-index: 2;
 
     @include min(992) {
+        padding-top: 50px;
+        padding-bottom: 80px;
+    }
+    @include min(1600) {
         padding-top: 100px;
         padding-bottom: 100px;
     }
@@ -372,11 +389,18 @@
                 background-color: rgba(8, 106, 216, 0.07);
                 border-radius: 100%;
                 margin-bottom: 10px;
-
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                        
                 @include min(992) {
                     width: 90px;
                     flex: 0 0 90px;
                     height: 90px;
+                }
+
+                i{
+                    font-size: 30px;
                 }
             }
 
@@ -663,14 +687,15 @@
 
                 &::before {
                     position: absolute;
+                    content: "";
                     left: 0;
-                    top: 0;
-                    content: "\4e";
-                    font-family: 'ElegantIcons';
-                    text-align: center;
-                    border-radius: 50%;
-                    font-weight: 700;
-                    color: $fourth-color;
+                    top: 3px;
+                width: 7px;
+                height: 14px;
+                border: 2px solid #000;
+                border-top: 0;
+                border-left: 0;
+                transform: rotate(45deg);
                 }
 
                 &+li {
