--- a/assets/css/pages/business-setup.css
+++ b/assets/css/pages/business-setup.css
@@ -145,37 +145,66 @@
 
 .why-dubai {
   padding-top: 80px;
+  padding-bottom: 80px;
   position: relative;
 }
-.why-dubai .inner {
-  background-position: top;
-  background-size: cover;
-  background-image: url(/assets/images/business/why-dubai.jpg);
+.why-dubai .inner .row {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.why-dubai .inner .img.left {
+  margin-right: 30px;
+}
+.why-dubai .inner .img.right {
+  margin-left: 30px;
+}
+.why-dubai .inner .figure {
+  width: 100%;
+  padding-top: calc(544 / 600 * 100%);
+  position: relative;
+}
+.why-dubai .inner .figure img {
+  position: absolute;
+  left: 0;
   width: 100%;
   height: 100%;
-  padding-bottom: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 0;
 }
 .why-dubai .inner .info {
   position: relative;
-  top: -80px;
-  background-color: #013346;
-  padding: 50px 40px;
 }
 .why-dubai .inner .info .title {
-  color: #fff;
+  color: #000;
   margin-bottom: 15px;
 }
 .why-dubai .inner .info p {
-  color: #fff;
+  color: #000;
   font-size: 18px;
   margin-bottom: 0;
 }
 .why-dubai .inner .info strong {
   font-size: 20px;
-  color: #fff;
+  color: #000;
   margin-top: 30px;
   display: inline-block;
   margin-bottom: 5px;
+  margin-right: 5px;
+}
+.why-dubai .inner .info ul {
+  padding-left: 20px;
+  margin-top: 15px;
+}
+.why-dubai .inner .info ul li {
+  color: #000;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+.why-dubai .inner .info ul li strong {
+  font-size: 18px;
+  margin-top: 0;
 }
 
 .business-document {
@@ -188,6 +217,7 @@
   max-width: -moz-max-content;
   max-width: max-content;
   margin-bottom: 20px;
+  text-align: center;
 }
 @media screen and (min-width: 992px) {
   .business-document .title {
@@ -195,25 +225,47 @@
     margin-bottom: 25px;
   }
 }
-.business-document-items {
-  margin-top: -30px;
+.business-document p {
+  font-size: 18px;
+  max-width: 700px;
+  text-align: center;
+  margin: auto;
 }
-.business-document-items .item-grid .single-item {
-  margin-top: 30px;
+.business-document .item-grid {
+  margin-top: 50px;
 }
-.business-document-items .item-grid:first-child {
-  margin-top: 80px;
+.business-document .item-grid .row {
+  row-gap: 25px;
 }
-.business-document-items .item-grid .item {
+.business-document .item-grid .item {
   padding: 50px 30px;
+  padding-bottom: 30px;
   background: #ffffff;
   -webkit-box-shadow: 0 0 10px #cccccc;
           box-shadow: 0 0 10px #cccccc;
+  height: 100%;
 }
-.business-document-items .item-grid .item .title {
+.business-document .item-grid .item .title {
   color: #000;
   margin-left: 0;
   margin-bottom: 15px;
+}
+.business-document .item-grid .item p {
+  text-align: left;
+}
+.business-document .not-sure {
+  margin-top: 50px;
+}
+.business-document .not-sure p {
+  font-size: 18px;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.business-document .not-sure a {
+  margin: auto;
 }
 
 .business-process {
