--- a/assets/css/pages/inner-pages.css
+++ b/assets/css/pages/inner-pages.css
@@ -11,23 +11,19 @@
   --width-container: 1200px;
 }
 
-.minland-details {
-  padding-top: 80px;
-  padding-bottom: 100px;
-}
-.minland-details .inner-form {
+.form-section .inner-form {
   margin-top: 50px;
   background-color: #013346;
   padding: 30px 20px;
   border-radius: 8px;
 }
-.minland-details .inner-form .title {
+.form-section .inner-form .title {
   color: #fff;
   margin-bottom: 40px;
   font-size: 25px;
 }
-.minland-details .inner-form .form-control,
-.minland-details .inner-form .form-select {
+.form-section .inner-form .form-control,
+.form-section .inner-form .form-select {
   background-color: transparent;
   border: none;
   border-radius: 0;
@@ -39,30 +35,61 @@
   font-size: 16px;
   color: #fff;
 }
-.minland-details .inner-form .form-control::-webkit-input-placeholder, .minland-details .inner-form .form-select::-webkit-input-placeholder {
+.form-section .inner-form .form-control::-webkit-input-placeholder, .form-section .inner-form .form-select::-webkit-input-placeholder {
   color: #fff;
 }
-.minland-details .inner-form .form-control::-moz-placeholder, .minland-details .inner-form .form-select::-moz-placeholder {
+.form-section .inner-form .form-control::-moz-placeholder, .form-section .inner-form .form-select::-moz-placeholder {
   color: #fff;
 }
-.minland-details .inner-form .form-control:-ms-input-placeholder, .minland-details .inner-form .form-select:-ms-input-placeholder {
+.form-section .inner-form .form-control:-ms-input-placeholder, .form-section .inner-form .form-select:-ms-input-placeholder {
   color: #fff;
 }
-.minland-details .inner-form .form-control::-ms-input-placeholder, .minland-details .inner-form .form-select::-ms-input-placeholder {
+.form-section .inner-form .form-control::-ms-input-placeholder, .form-section .inner-form .form-select::-ms-input-placeholder {
   color: #fff;
 }
-.minland-details .inner-form .form-control::placeholder,
-.minland-details .inner-form .form-select::placeholder {
+.form-section .inner-form .form-control::placeholder,
+.form-section .inner-form .form-select::placeholder {
   color: #fff;
 }
-.minland-details .inner-form .form-select {
+.form-section .inner-form .form-select {
   padding-left: 5px;
 }
-.minland-details .inner-form .form-select option {
+.form-section .inner-form .form-select option {
   color: #000;
 }
-.minland-details .inner-form button:hover {
+.form-section .inner-form button:hover {
   background-color: rgba(235, 34, 39, 0.7);
+}
+
+.minland-details {
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+.minland-details .head .title {
+  color: #013346;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin: auto;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 992px) {
+  .minland-details .head .title {
+    margin-bottom: 25px;
+  }
+}
+.minland-details .head p {
+  font-size: 18px;
+  margin: auto;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+@media screen and (min-width: 992px) {
+  .minland-details .head p {
+    margin: auto;
+    margin-bottom: 50px;
+  }
 }
 .minland-details .nav-pills {
   width: 500px;
@@ -99,4 +126,112 @@
 .minland-details .tab-content {
   width: 100%;
   padding-left: 100px;
+}
+.minland-details .tab-content .title {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.minland-details .tab-content p {
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
+.minland-lisence {
+  padding: 100px 0;
+}
+.minland-lisence .title {
+  color: #013346;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin: auto;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 992px) {
+  .minland-lisence .title {
+    margin-bottom: 25px;
+  }
+}
+.minland-lisence p {
+  font-size: 18px;
+  max-width: 740px;
+  margin: auto;
+  text-align: center;
+}
+.minland-lisence ul {
+  margin: 70px 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  gap: 20px;
+}
+.minland-lisence ul li {
+  font-size: 18px;
+  text-align: center;
+}
+.minland-lisence ul li strong {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 15px;
+  color: #013346;
+}
+.minland-lisence ul + p {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  color: #EB2227;
+}
+
+.minland-documents {
+  padding: 100px 0;
+}
+.minland-documents .title {
+  color: #013346;
+  max-width: 90%;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 992px) {
+  .minland-documents .title {
+    margin-bottom: 25px;
+  }
+}
+.minland-documents p {
+  font-size: 18px;
+  max-width: 740px;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.minland-documents a {
+  padding-left: 0;
+}
+.minland-documents .row {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.minland-documents .services-items {
+  margin-top: -30px;
+}
+.minland-documents .services-items .item-grid:first-child {
+  margin-top: 80px;
+}
+.minland-documents .services-items .single-item {
+  margin-top: 30px;
+}
+.minland-documents .services-items .single-item .item {
+  padding: 40px 30px;
+  background: #ffffff;
+  -webkit-box-shadow: 0 0 10px #cccccc;
+          box-shadow: 0 0 10px #cccccc;
+}
+.minland-documents .services-items .single-item .item ul {
+  margin-top: 20px;
+  padding-left: 20px;
+}
+.minland-documents .services-items .single-item .item ul li + li {
+  margin-top: 10px;
+  font-size: 14px;
 }
