--- a/assets/scss/pages/business-setup.scss
+++ b/assets/scss/pages/business-setup.scss
@@ -135,35 +135,58 @@
 
 .why-dubai{
     padding-top: 80px;
-   
+    padding-bottom: 80px;
     position: relative;
     .inner{
-        background-position: top;
-        background-size: cover;
-        background-image: url(/assets/images/business/why-dubai.jpg);
-        width: 100%;
-        height: 100%;
-        padding-bottom: 100px;
+        .row{
+            align-items: center
+        }
+        .img{
+            &.left{
+                margin-right: 30px;
+               }
+               &.right{
+                margin-left: 30px;
+               }
+        }
+        .figure{
+            width: 100%;
+            @include aspectRatio(544,600);
+         
+        }
         .info{
             position: relative;
-            top: -80px;
-            background-color: $primary;
-            padding: 50px 40px;
+        
             .title{
-                color: #fff;
+                color: #000;
                 margin-bottom: 15px;
             }
             p{
-                color: #fff;
+                color: #000;
                 font-size: 18px;
                 margin-bottom: 0;
             }
+           
             strong{
                 font-size: 20px;
-                color: #fff;
+                color: #000;
                 margin-top: 30px;
                 display: inline-block;
                 margin-bottom: 5px;
+                margin-right: 5px;
+            }
+            ul{
+                padding-left: 20px;
+                margin-top: 15px;
+                li{
+                    color: #000;
+                    font-size: 16px;
+                    margin-bottom: 15px;
+                    strong{
+                        font-size: 18px;
+                        margin-top: 0;
+                    }
+                }
             }
         }
     }
@@ -177,33 +200,52 @@
         color: $primary;
         max-width: max-content;
         margin-bottom: 20px;
+        text-align: center;
 
         @include min(992) {
             margin: auto;
             margin-bottom: 25px;
         }
     }
-    &-items{
-        margin-top: -30px;
-        .item-grid{
-            .single-item{
-                margin-top: 30px;
-
+    p{
+        font-size: 18px;
+        max-width: 700px;
+        text-align: center;
+        margin: auto;
+    }
+    .item-grid{
+        margin-top: 50px;
+        .row{
+            row-gap: 25px;
+        }
+        .item{
+            padding: 50px 30px;
+            padding-bottom: 30px;
+            background: #ffffff;
+            box-shadow: 0 0 10px #cccccc;
+            height: 100%;
+           
+            .title{
+                color: #000;
+                margin-left: 0;
+                margin-bottom: 15px;
             }
-            &:first-child{
-
-                margin-top: 80px;
+            p{
+                text-align: left;
             }
-            .item{
-                padding: 50px 30px;
-                background: #ffffff;
-                box-shadow: 0 0 10px #cccccc;
-                .title{
-                    color: #000;
-                    margin-left: 0;
-                    margin-bottom: 15px;
-                }
-            }
+        }
+      
+    }
+    .not-sure{
+        margin-top: 50px;
+        p{
+            font-size: 18px;
+            max-width: max-content;
+            margin: auto;
+            margin-bottom: 20px;
+        }
+        a{
+            margin: auto;
         }
     }
 }
