--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -20,6 +20,21 @@
           align-items: end;
   width: 100%;
   height: 100vh;
+  position: relative;
+  background-color: #EEF6F8;
+}
+.home-banner::before {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 0;
+  background-image: url(/assets/images/banner.png);
+  background-position: right;
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
 @media screen and (min-width: 992px) {
   .home-banner {
@@ -30,6 +45,8 @@
 }
 .home-banner .content {
   padding-bottom: 80px;
+  position: relative;
+  z-index: 2;
 }
 @media screen and (min-width: 992px) {
   .home-banner .content {
@@ -118,7 +135,7 @@
   font-size: 18px;
   max-width: 850px;
   margin: auto;
-  font-weight: 500;
+  font-weight: 400;
   text-align: left;
 }
 @media screen and (min-width: 992px) {
@@ -211,9 +228,9 @@
 .home-business-setup .flip-card-back .title {
   color: #000;
   margin: 0;
-  margin-bottom: 5px;
+  margin-bottom: 25px;
   font-size: 20px;
-  font-family: "Saira", sans-serif;
+  font-weight: 600;
 }
 @media screen and (min-width: 992px) {
   .home-business-setup .flip-card-back .title {
@@ -226,16 +243,15 @@
   color: #000;
   text-align: left;
 }
-.home-business-setup .flip-card-back ul {
-  list-style-type: none;
+.home-business-setup .flip-card-back ol {
   text-align: left;
-  margin-top: 30px;
-  padding: 0;
+  margin-top: 15px;
+  padding-left: 20px;
 }
-.home-business-setup .flip-card-back ul li {
+.home-business-setup .flip-card-back ol li {
   font-size: 16px;
 }
-.home-business-setup .flip-card-back ul li + li {
+.home-business-setup .flip-card-back ol li + li {
   margin-top: 15px;
 }
 .home-business-setup .flip-card-back a {
@@ -373,7 +389,7 @@
 }
 @media screen and (min-width: 992px) {
   .home-services .service-top p {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 .home-services .service-top .btn-primary {
@@ -501,6 +517,9 @@
   padding-bottom: 50px;
   background-color: #ecf6fa;
   position: relative;
+}
+.home-about a {
+  margin-top: 30px;
 }
 .home-about::before {
   position: absolute;
@@ -729,16 +748,17 @@
 .home-about .content ul li {
   position: relative;
   padding-left: 20px;
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 500;
 }
 .home-about .content ul li::before {
   position: absolute;
   content: "";
   left: 0;
   top: 3px;
-  width: 7px;
-  height: 14px;
-  border: 2px solid #000;
+  width: 6px;
+  height: 13px;
+  border: 2px solid #F39321;
   border-top: 0;
   border-left: 0;
   -webkit-transform: rotate(45deg);
@@ -756,7 +776,6 @@
   font-size: 18px;
   display: block;
   font-weight: 400;
-  font-family: "Saira", sans-serif;
 }
 .home-about .content::before {
   position: absolute;
@@ -826,4 +845,74 @@
 }
 .home-contact a {
   margin: auto;
+}
+
+.home-blog {
+  padding: 100px 0;
+}
+.home-blog .card {
+  width: 407px;
+  border: none;
+}
+.home-blog .card figure {
+  position: relative;
+  margin-bottom: 0;
+  border-radius: 8px;
+  overflow: hidden;
+  padding-top: calc(390 / 408 * 100%);
+  position: relative;
+}
+.home-blog .card figure img {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 0;
+}
+.home-blog .card .card-footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 40%;
+  background-color: transparent;
+  z-index: 2;
+  padding: 20px;
+  border: none;
+}
+.home-blog .card p {
+  font-size: 20px;
+  margin-bottom: 0;
+  color: #fff;
+  font-weight: 500;
+  line-height: 28px;
+}
+.home-blog .card p + p {
+  font-size: 16px;
+  margin-top: 15px;
+  font-weight: 500;
+}
+.home-blog .card .pill {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  z-index: 2;
+  background-color: #F39321;
+  border-radius: 300px;
+  padding: 5px 20px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+}
+.home-blog .card::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1;
 }
