--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -13,13 +13,27 @@
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     @include min(992){
-        height: size(90); 
+        height: size(130); 
+    }
+
+    .top-header{
+        padding: 10px 0;
+        border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+        a{
+            margin-left: 20px;
+            text-decoration: none;
+            font-size: 14px;
+            i{
+                margin-right: 10px;
+            }
+        }
     }
 
     .logo{
         max-width: 170px;
         @include min(992){
             max-width: 250px; 
+            padding: 15px 0;
         }
         a{
             display: inline-block;
