--- a/assets/scss/pages/business-setup.scss
+++ b/assets/scss/pages/business-setup.scss
@@ -77,14 +77,36 @@
         flex-direction: column;
         height: 100%;
         text-align: center;
+        border:none;
+        position: relative;
+        z-index: 1;
+        background-color: transparent;
+        overflow: hidden;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        &::before{
+            position: absolute;
+            content: "";
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgb(243,147,33);
+            background: linear-gradient(130deg, rgba(243,147,33,.8) 0%, rgba(255,255,255,1) 50%);
+z-index: -1;
+        }
+        // border-top: 5px solid $third-color;
+
         .title{
             margin-bottom: 20px;
+            color: #000;
         }
         i{
             font-size: 40px;
+            color: #000;
         }
         p{
             margin-top: 30px;
+            color: #000;
         }
         &-footer{
           
@@ -158,7 +180,7 @@
             position: relative;
         
             .title{
-                color: #000;
+                color: $primary;    
                 margin-bottom: 15px;
             }
             p{
@@ -167,25 +189,17 @@
                 margin-bottom: 0;
             }
            
-            strong{
-                font-size: 20px;
-                color: #000;
-                margin-top: 30px;
-                display: inline-block;
-                margin-bottom: 5px;
-                margin-right: 5px;
-            }
+         
             ul{
                 padding-left: 20px;
-                margin-top: 15px;
+                margin-top: 35px;
+                list-style-type:none;
                 li{
                     color: #000;
-                    font-size: 16px;
-                    margin-bottom: 15px;
-                    strong{
-                        font-size: 18px;
-                        margin-top: 0;
-                    }
+                    font-size: 18px;
+                    font-weight: 500;
+                    margin-bottom: 20px;
+                  
                 }
             }
         }
@@ -224,14 +238,20 @@
             background: #ffffff;
             box-shadow: 0 0 10px #cccccc;
             height: 100%;
+            text-align: center;
+            .info{
+                text-align: center;
+            }
            
             .title{
                 color: #000;
                 margin-left: 0;
+                margin: auto;
                 margin-bottom: 15px;
             }
             p{
-                text-align: left;
+                text-align: center;
+                font-size: 16px;
             }
         }
       
@@ -295,15 +315,17 @@
       .timeline-container {
         position: relative;
         width: 50%;
-        padding: var(--spacing-l) var(--spacing-xl);
+        padding: 10px 30px;
         box-sizing: border-box;
         opacity: 0;
         transform: translateY(50px);
         transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        width: 450px;
       }
     
       .timeline-container.left {
-        left: 0;
+        left: 12.5%;
+
       }
     
       .timeline-container.right {
@@ -325,7 +347,7 @@
       }
     
       .content {
-        padding: var(--spacing-xl);
+        padding: 30px 20px;
         background-color: var(--text-lighter);
         position: relative;
         border-radius: var(--spacing-l);
@@ -333,8 +355,16 @@
         transition: box-shadow 0.3s ease, transform 0.3s ease;
         text-align: center;
         color: var(--background-dark);
-        font-weight: bold;
-        font-size: 1.25rem;
+        strong{
+            margin-bottom: 15px;
+            font-size: 18px;
+            display: block;
+        }
+        p{
+            font-weight: 400;
+            font-size: 16px;
+            margin-bottom: 0;
+        }
       }
     
       .content:hover {
