--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -9,6 +9,21 @@
     align-items: end;
     width: 100%;
     height: 100vh;
+    position: relative;
+    background-color: #EEF6F8;
+    &::before{
+        position: absolute;
+        content: "";
+        right: 0;
+        top: 0;
+        background-image: url(/assets/images/banner.png);
+        background-position: right;
+        background-size: contain;
+        background-repeat: no-repeat;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+     }
 
     @include min(992) {
         align-items: center;
@@ -16,6 +31,8 @@
 
     .content {
         padding-bottom: 80px;
+        position: relative;
+        z-index: 2;
 
         @include min(992) {
             padding-bottom: 0;
@@ -104,7 +121,7 @@
         max-width: 850px;
         margin: auto;
       
-        font-weight: 500;
+        font-weight: 400;
         text-align: left;
 
         @include min(992) {
@@ -199,9 +216,9 @@
             .title {
                 color: #000;
                 margin: 0;
-                margin-bottom: 5px;
+                margin-bottom: 25px;
                 font-size: 20px;
-                font-family: $font-family;
+               font-weight: 600;
 
                 @include min(992) {
                     font-size: 25px;
@@ -216,11 +233,11 @@
                 text-align: left;
             }
 
-            ul {
-                list-style-type: none;
+            ol {
+             
                 text-align: left;
-                margin-top: 30px;
-                padding: 0;
+                margin-top: 15px;
+                padding-left: 20px;
 
                 li {
                     font-size: 16px;
@@ -341,7 +358,7 @@
             margin-bottom: 30px;
 
             @include min(992) {
-                font-size: 20px;
+                font-size: 18px;
             }
         }
 
@@ -458,6 +475,9 @@
     background-color: #ecf6fa;
     // overflow: hidden;
     position: relative;
+    a{
+        margin-top: 30px;
+    }
     &::before{
         position: absolute;
         content: "";
@@ -603,6 +623,7 @@
          
 
         }
+       
         @include min(576) {
             margin-top: 60px;
             display: flex;
@@ -683,16 +704,17 @@
             li {
                 position: relative;
                 padding-left: 20px;
-                font-size: 18px;
+                font-size: 16px;
+                font-weight: 500;
 
                 &::before {
                     position: absolute;
                     content: "";
                     left: 0;
                     top: 3px;
-                width: 7px;
-                height: 14px;
-                border: 2px solid #000;
+                width: 6px;
+                height: 13px;
+                border: 2px solid $third-color;
                 border-top: 0;
                 border-left: 0;
                 transform: rotate(45deg);
@@ -714,7 +736,7 @@
                 font-size: 18px;
                 display: block;
                 font-weight: 400;
-                font-family: $font-family;
+              
             }
         }
         &::before{
@@ -775,4 +797,68 @@
     }
 
   
+}
+
+.home-blog{
+    padding: 100px 0;
+    .card{
+     width: 407px;
+     border: none;
+        figure{
+            position: relative;
+            margin-bottom:0;
+            border-radius: 8px;
+            overflow: hidden;
+            @include aspectRatio(390, 408)
+        }
+        .card-footer{
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 40%;
+            background-color: transparent;
+            z-index: 2;
+            padding: 20px;
+            border: none;
+        }
+        p{
+            font-size: 20px;
+            margin-bottom: 0;
+            color: #fff;
+            font-weight: 500;
+            line-height: 28px;
+            span{
+               
+            }
+
+            &+p{
+                font-size: 16px;
+                margin-top: 15px;
+                font-weight: 500;
+            }
+        }
+        .pill{
+            position: absolute;
+            left: 20px;
+            top: 20px;
+            z-index: 2;
+        background-color: $third-color;
+            border-radius: 300px;
+            padding: 5px 20px;
+            color: #fff;
+            font-size: 12px;
+            font-weight: 500;
+        }
+       &::before{
+        position: absolute;
+        content: "";
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: #000000, $alpha: .4);
+        z-index: 1;
+       }
+    }
 }
