--- a/assets/scss/utilities/_resets.scss
+++ b/assets/scss/utilities/_resets.scss
@@ -15,7 +15,7 @@ html {
 body {
     position: relative;
     margin: 0 auto;
-    font-family: $font-family;
+    font-family: $ttl-family;
     // padding-top: size(80);
 }
 
