--- a/assets/scss/pages/about-us.scss
+++ b/assets/scss/pages/about-us.scss
@@ -8,6 +8,13 @@
     margin-top: 90px;
 }
 
+.inner-banner{
+    text-align: left;
+    .title{
+        margin: 0;
+    }
+}
+
 .about-belive {
     padding: 50px 0;
 
