--- a/assets/css/pages/about-us.css
+++ b/assets/css/pages/about-us.css
@@ -15,6 +15,13 @@
   margin-top: 90px;
 }
 
+.inner-banner {
+  text-align: left;
+}
+.inner-banner .title {
+  margin: 0;
+}
+
 .about-belive {
   padding: 50px 0;
 }
