--- a/assets/css/pages/business-setup.css
+++ b/assets/css/pages/business-setup.css
@@ -20,10 +20,20 @@
   position: relative;
   z-index: 1;
   overflow: hidden;
-  background-image: url(/assets/images/business/banner.jpg);
-  background-position: center center;
-  background-size: cover;
-  text-align: center;
+}
+.business-banner .figure {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.business-banner .figure img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 0;
 }
 .business-banner::after {
   background: #000000 none repeat scroll 0 0;
@@ -38,8 +48,7 @@
 }
 .business-banner .title {
   margin-bottom: 15px;
-  max-width: 600px;
-  margin: auto;
+  max-width: 640px;
   color: #fff;
 }
 @media screen and (min-width: 992px) {
@@ -50,14 +59,9 @@
 .business-banner p {
   color: #fff;
   max-width: 800px;
-  margin: auto;
   font-size: 18px;
   margin-bottom: 40px;
 }
-.business-banner button {
-  margin: auto;
-}
-
 .service-list {
   padding-top: 100px;
   padding-bottom: 100px;
