--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -21,6 +21,7 @@
   width: 100%;
   height: 100vh;
   position: relative;
+  padding-bottom: 50px;
   background-color: #EEF6F8;
 }
 .home-banner::before {
@@ -35,13 +36,6 @@
   z-index: 1;
   width: 100%;
   height: 100%;
-}
-@media screen and (min-width: 992px) {
-  .home-banner {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
 }
 .home-banner .content {
   padding-bottom: 80px;
@@ -197,9 +191,21 @@
   color: #000;
   padding: 0;
 }
+.home-business-setup .flip-card-front p {
+  position: absolute;
+  top: 50px;
+  color: #fff;
+  font-weight: 500;
+  left: 50%;
+  font-size: 22px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
 .home-business-setup .flip-card-front figure {
   width: 100%;
   height: 100%;
+  border-radius: 12px;
+  overflow: hidden;
 }
 .home-business-setup .flip-card-front figure img {
   width: 100%;
@@ -915,4 +921,8 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 1;
+}
+.home-blog a {
+  margin: auto;
+  margin-top: 50px;
 }
