--- a/assets/scss/pages/business-setup.scss
+++ b/assets/scss/pages/business-setup.scss
@@ -9,10 +9,19 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
-    background-image: url(/assets/images/business/banner.jpg);
-    background-position: center center;
-    background-size: cover;
-    text-align: center;
+    .figure{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: 0;
+        }
+    }
     &::after{
         background: #000000 none repeat scroll 0 0;
         content: "";
@@ -27,8 +36,7 @@
 
     .title {
         margin-bottom: 15px;
-        max-width: 600px;
-        margin: auto;
+        max-width: 640px;
         color: #fff;
         @include min(992) {
             margin-bottom: 25px;
@@ -37,12 +45,11 @@
     p{
         color: #fff;
         max-width: 800px;
-        margin: auto;
         font-size: 18px;
         margin-bottom: 40px;
     }
     button{
-        margin: auto;
+       
     }
 
 }
