--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100vh;
     position: relative;
+    padding-bottom: 50px;
     background-color: #EEF6F8;
     &::before{
         position: absolute;
@@ -25,9 +26,7 @@
         height: 100%;
      }
 
-    @include min(992) {
-        align-items: center;
-    }
+  
 
     .content {
         padding-bottom: 80px;
@@ -185,9 +184,20 @@
             // background-color: $fourth-color;
             color: #000;
             padding: 0;
+            p{
+                position: absolute;
+                top: 50px;
+                color: #fff;
+                font-weight: 500;
+                left: 50%;
+                font-size: 22px;
+                transform: translateX(-50%);
+            }
             figure{
                 width: 100%;
                 height: 100%;
+                border-radius: 12px;
+                overflow: hidden;
                 img{
                     width: 100%;
                     height: 100%;
@@ -860,5 +870,9 @@
         background-color: rgba($color: #000000, $alpha: .4);
         z-index: 1;
        }
+    }
+    a{
+        margin: auto;
+        margin-top: 50px;
     }
 }
