--- a/assets/scss/utilities/_resets.scss
+++ b/assets/scss/utilities/_resets.scss
@@ -41,6 +41,11 @@ button {
     -webkit-appearance: none;
 }
 
+.container{
+    position: relative;
+    z-index: 1;
+}
+
 select.default {
     -moz-appearance: none;
     -webkit-appearance: none;
